--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,29 @@
-# Server Configuration
 SERVER_PORT=8005
 SERVER_READ_TIMEOUT=30s
 SERVER_WRITE_TIMEOUT=30s
 SERVER_IDLE_TIMEOUT=60s
 SERVER_SHUTDOWN_TIMEOUT=10s
 
-# Database Configuration (PostgreSQL)
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_DB=event-booker
+POSTGRES_PASSWORD=your_password
+POSTGRES_DB=event_booker
 POSTGRES_MAX_OPEN_CONNS=10
 POSTGRES_MAX_IDLE_CONNS=5
 POSTGRES_CONN_MAX_LIFETIME=5m
 
-# Retry Strategy
 RETRIES_ATTEMPTS=3
 RETRIES_DELAY_MS=2000
 RETRIES_BACKOFF=2
+
+SCHEDULER_CLEANUP_INTERVAL=1m
+SCHEDULER_BOOKING_TTL=30m
+
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=user@example.com
+SMTP_PASSWORD=password
+FROM_EMAIL=no-reply@example.com
+
+TELEGRAM_BOT_TOKEN=your_bot_token
